<resources>
    <string name="app_name">CSE5236 Mobile App</string>
    <string name="title">Bracket Maker</string>
    <string name="logout_button">Log Out</string>
    <string name="location_button">Locations</string>
    <string name="create_button">Create</string>
    <string name="view_button">View</string>
    <string name="settings_button_desc">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username_registration_text">Username</string>
    <string name="password_registration_text">Password</string>
    <string name="reenter_password_registration_text">Re-enter Password</string>
    <string name="submit_button_text">Submit</string>
    <string name="back_button_text">Back</string>
    <string name="account_settings_text">Account Settings</string>
    <string name="new_username_text">New Username</string>
    <string name="new_password_text">New Password</string>
    <string name="reenter_new_password_">Re-enter New Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="tournaments_today">Tournaments Today</string>
    <string name="tournament_modify_text">Select Property to Modify</string>
    <string name="modify_address_text">Address</string>
    <string name="modify_date_text">Date</string>
    <string name="modify_event_type_text">Event Type</string>
    <string name="modify_number_players_text">Number Players</string>
    <string name="modify_rules_text">Rules</string>
    <string name="modify_time_text">Time</string>
    <string name="modify_tournament_name_text">Tournament Name</string>
    <string name="modify_is_morning_text">Is Morning</string>
    <string name="modify_is_private_text">Is Private</string>
    <string name="delete_tournament_text">Delete Tournament</string>
    <string name="view_games_text">Games</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="timeResource">Time:</string>
    <string name="dateResource">Date:</string>
    <string name="date_placeholder" translatable="false">../../..</string>
    <string name="time_placeholder" translatable="false">..:.. am</string>
    <string name="numPlayersPlaceholder" translatable="false">#</string>
    <string name="tournament_name_placeholder">Tournament Name</string>
    <string name="address_placeholder">Address:</string>
    <string name="rules">Rules:</string>
    <string name="sampleRuleStringPlaceholder">In the simplest terms, overtime occurs when the game is tied at the end of regulation (through four quarters), and the team that scores the most points in overtime wins the game. Unlike in the NFL, each team gets one possession from the opponent\'s 25-yard line to begin overtime. If either team outscores the other during the first overtime period, that team wins the game. If it remains tied at the end of the first overtime, another overtime period is played with each team again starting from the 25-yard line. If the game is still tied after two overtime periods, both teams alternate 2-point conversion attempts to determine a winner. Another rule that differs from NFL overtime is the clock. In college football, there is no game clock in overtime, as each team gets possession regardless of how long the previous series takes. There is still a play clock in overtime periods. If the game is tied at the end of regulation, the captain of the visiting team calls heads or tails. The side that wins the toss chooses whether to start on offense or defense, or which end of the field it will defend in the first overtime period. The side that loses the toss chooses from the remaining option. Typically, teams will choose to defend first in overtime for a very simple reason: They want to know how many points they\'ll need to score on their offensive possession. If the team that starts on offense scores a touchdown, the other team knows it can\'t settle for a field goal on its offensive possession. Conversely, if the initial team fails to score at all, a field goal would win it for the other team.</string>
    <string name="round">Round #</string>
    <string name="round_name_placeholder">Semifinal</string>
    <string name="players">Players:</string>
    <string name="jyablok_placeholder" translatable="false">jyablok</string>
    <string name="enter_tournament_join_code">Enter Tournament Join Code</string>
    <string name="join_tournament">Join Tournament</string>
    <string name="my_tournaments">My Tournaments</string>
    <string name="continue_txt">Continue</string>
    <string name="join_code">Join Code:</string>
    <string name="search_tournament_text">Tournament Search</string>
    <string-array name="players_array">
        <item>4</item>
        <item>8</item>
        <item>16</item>
    </string-array>

    <string-array name="event_types_array">
        <item>Single Elimination</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <!--  CHANGE ENGLISH TO SPANISH IN SPANISH FILE  -->
    <string name="lang_button">Espanol</string>
    <string name="join_with_code">Join With Code</string>
    <string name="finalize_game">Finalize Game</string>
    <string name="unfinalize_game">Unfinalize Game</string>
    <string name="join">Join</string>
    <string name="games">Games</string>
    <string name="welcome_txt">Welcome: </string>
    <string name="tournament_name">Tournament Name</string>
    <string name="greatest_tournment">GREATEST TOURNMENT</string>
    <string name="enter_amount_of_players">Enter Amount of Players</string>
    <string name="enter_event_type">Enter Event Type</string>
    <string name="date_and_time">Date and Time</string>
    <string name="public_or_private">Public or Private</string>
    <string name="players_no_colon">Players</string>
    <string name="rules_no_colon">Rules</string>
</resources>