<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".AccountSettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/accountSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="472dp"
            android:text="@string/account_settings_text"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/settingsEditUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_username_text"
            android:inputType="text|textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameSettingsText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/usernameSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/username_registration_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/settingsEditUsername"
            app:layout_constraintTop_toBottomOf="@+id/accountSettingsText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/passwordSettingsText"
            android:layout_width="122dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:text="@string/password_registration_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/settingsEditUsername"
            app:layout_constraintTop_toBottomOf="@+id/settingsEditUsername"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/password_registration_text" />

        <EditText
            android:id="@+id/settingsEditPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_password_text"
            android:inputType="text|textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordSettingsText"
            app:layout_constraintTop_toBottomOf="@+id/passwordSettingsText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/reenterPasswordSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reenter_password_registration_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/settingsEditPassword"
            app:layout_constraintTop_toBottomOf="@+id/settingsEditPassword"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/settingsReenterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/reenter_new_password_"
            android:inputType="text|textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/reenterPasswordSettingsText"
            app:layout_constraintTop_toBottomOf="@+id/reenterPasswordSettingsText"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/settingsBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="121dp"
            android:text="@string/back_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settingsSubmitButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/settingsReenterPassword"
            app:layout_constraintTop_toBottomOf="@+id/settingsReenterPassword" />

        <Button
            android:id="@+id/settingsSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="121dp"
            android:text="@string/submit_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/settingsReenterPassword"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/settingsBackButton"
            app:layout_constraintTop_toBottomOf="@+id/settingsReenterPassword" />

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delete_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsSubmitButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>